--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "enableIvy": false
+    "enableIvy": true
   },
   
 }
