--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
